# paper

2023.10.07/: perm.txt  summary
2023.10.07/hacking.mon/: COLORS.py  a.py  b.py  c.py  combinatorics.py  dog.py  fact.py  fruit.py  green.py  h.py  t.py  total.py
2023.10.07/hacking.tue/: adventure.py  apply.py  area.py  bigger.py  game.py  line.py  pets.py  rectangle.py  s.py  select.py  square.py  syllabus.py
2023.10.07/hacking.wed/: COLORS.py  a.py  e.py  setup.py
2023.10.07/hacking.wed/old/: adv.py  adv2.py  adv3.py  adv4.py  adv6.py  adv7.py  adv8.py  announcements.py  clock.py  demo_getkey.py
archive/google.vm.hongkong/: .bashrc  .profile
archive/google.vm.hongkong/.local/startup/: bashrc  exittrap.bash  firstrun.bash  leave.bash
archive/google.vm.hongkong/_hacks/hack.hallway.bash/: a  h  hallway
archive/google.vm.hongkong/_hacks/hacking.terminal/: b  count  count2  count3.color  d  keypress  outline  ps.demo  typescript  x
archive/google.vm.hongkong/game/: .essay.txt.swp  mymath.py
archive/google.vm.hongkong/lessons/20230928.lesson.paper/: add2  database  e  err  hello.final  hello.v1  hello.v2  hello.v3  hello.v4.read  t  (+2 more)
archive/google.vm.hongkong/prj.hallway/: init  pyproject.toml
archive/google.vm.hongkong/prj.hallway/dev/: a.py  hilo
archive/google.vm.hongkong/prj.hallway/dev/versions/: a  hallway.v1.bash  hallway.v2.bash  hallway.v3.bash  hallway.v3.usage  hallway.v4.py  hallway.v5.py
archive/google.vm.hongkong/project.hilo/: game.py
archive/google.vm.instance1/: hilo.2.case
from-google-instance/: countdown  double  hilo  hilo.0
(+4 files in other folders)
