[tool.poetry]
name = "prj-color"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prj"}]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
ipython = "^8.16.1"
click = "^8.1.7"
nose = "^1.3.7"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
